Fixed AuthPage & Header z-index

--- a/src/Pages/AuthPage/_AuthPage.scss
+++ b/src/Pages/AuthPage/_AuthPage.scss
@@ -13,7 +13,6 @@
     position: relative;
     gap: 50px;
     padding-top: 60px;
-    overflow: hidden;
 
     &__hero {
       &-container {
