--- a/src/components/Forms/AuthForm/_AuthForm.scss
+++ b/src/components/Forms/AuthForm/_AuthForm.scss
@@ -9,7 +9,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     background-color: transparent;
-    z-index: 9;
+    z-index: 1;
 
     &__wrapper {
         display: flex;
